# endstone-easybackuper

./: .git-cliff.toml  .gitignore  CHANGELOG.md  README.md  README_EN.md  build-dev.ps1  build-whl.ps1  pyproject.toml  setup.py  tooth.json  update_versions.json
.github/workflows/: prepare-release.yml  publish-release.yml
go/restore_handler/: go.mod  main.go  restore_handler  rsrc_windows_386.syso
go/restore_handler_en/: go.mod  go.sum  main_en.go  restore_handler  restore_handler_en  rsrc_windows_amd64.syso
go/restore_handler_en/winres/: winres.json
src/endstone_easybackuper/: __init__.py  bstats.py  command_example.py  easybackuper_plugin.py  restore_handler.py
