[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-easybackuper"
version = "0.4.3.1"
authors = [
    { name = "MengHanLOVE", email = "2193438288@qq.com" },
]
description = "基于 EndStone 的最最最简单的Python热备份插件 / The simplest Python hot backup plugin based on EndStone."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["endstone", "plugins", "backup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MengHanLOVE1027/endstone-easybackuper"

[project.entry-points."endstone"]
easybackuper = "endstone_easybackuper:EasyBackuperPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_easybackuper"]