[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-easybackuper"
version = "0.4.3.3"
authors = [
    { name = "MengHanLOVE", email = "2193438288@qq.com" },
]
description = "一个基于 EndStone 的轻量级、高性能、功能全面的Minecraft服务器热备份插件 / A lightweight, high-performance, and feature-rich hot backup plugin for Minecraft servers based on EndStone."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["endstone", "plugins", "backup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MengHanLOVE1027/endstone-easybackuper"

[project.entry-points."endstone"]
easybackuper = "endstone_easybackuper:EasyBackuperPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_easybackuper"]